<resources>
    <string name="app_name">Story Finding</string>

    <string name="play">Play</string>
    <string name="cover_image">Cover image</string>
    <string name="download_story">Download</string>
    <string name="delete_save">Delete save file</string>

    <string name="play_via_external_engine_provider">Via Thunderword</string>
    <string name="play_zcode">[Z-code]</string>
    <string name="play_glulx">[Glulx]</string>

    <string name="delete_story">Delete story</string>
    <string name="delete_story_keepfile">Delete KeepFile</string>

    <string name="external_provider_noprompt">Interrupt story</string>
    <string name="external_provider_activity_label">Activity</string>
    <string name="engine_none_detected_invite">Thunderword or other engine provider apps not detected on this Android system. For additional compatibility and faster performance with some fiction stories, we invite you to install the Thunderword app on your system and new options will appear to launch this story to the partner app. Thunderword app pre-release link:</string>
    <string name="engine_provider_store_link0">https://Play.Google.com/apps/testing/com.wakereality.thunderword</string>
    <string name="storylist_header_extra_thunderwordapp0">Thunderword app can be installed from Google Play at: https://Play.Google.com/apps/testing/com.wakereality.thunderword and is also on the Amazon appstore. For additional compatibility and faster performance with some fiction stories, both apps work together and extra options will appear.</string>
    <!-- The new RecyclerView list has an expandable section, so this message is shorter and only for provider absent -->
    <string name="engine_none_detected_shorter">Thunderword or other engine apps not detected</string>


    <string name="ifdb_viewgame">http://ifdb.tads.org/viewgame?ifid=%s</string>
    <string name="ifdb_label">Go to IFDB</string>
    <string name="ifdb_text">View this story in the Interactive Fiction Database</string>

    <string name="name">Name</string>
    <string name="url">URL</string>

    <!-- uses Square library Phrase -->
    <string name="engine_provider_detected_named">Interactive Fiction engine provider: <b>{engine}</b>{extra_a}</string>
    <string name="engine_provider_detected_extra"> [{quantity} detected]</string>

    <string name="download_failed">Failed download: %s</string>
    <string name="download_invalid">Invalid download: %s</string>

    <string name="ifarchive">(ifarchive)</string>
    <string name="ifarchive_download_url_input_prefix">http://mirror.ifarchive.org/if-archive/games/</string>
    <string name="zip_entry">ZIP entry</string>

    <string name="scrape">Get more</string>
    <string name="downloaded_recently">Downloaded %tr</string>
    <string name="downloaded_at">Downloaded %tD</string>
    <string name="saved_recently">Saved %tr</string>
    <string name="saved_at">Saved %tD</string>

    <!-- RecyclerView Playground -->

    <string name="title_section1">Vertical List</string>
    <string name="title_section3">Vertical List 2 columns</string>
    <string name="title_section7">Vertical List 3 columns</string>
    <string name="title_section4">Vertical Staggered 2 col</string>
    <string name="title_section6">Vertical Staggered 3 col</string>
    <string name="title_section2">Horizontal List</string>
    <string name="title_section5">Fixed Two-Way List</string>
    <string name="title_section_information">More settings &amp; Info</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_empty">Empty</string>
    <string name="action_small">Small Grid</string>
    <string name="action_medium">Medium Grid</string>
    <string name="action_large">Large Grid</string>
    <string name="action_scroll_zero">Jump Home</string>
    <string name="action_smooth_zero">Smooth Scroll Home</string>
    <string name="action_scroll_max">Jump End</string>
    <string name="action_smooth_max">Smooth Scroll End</string>
    <string name="action_restore_tips">Restore Tips</string>
    <string name="action_expand_options">Expand options</string>
    <string name="action_contract_options">Contract options</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search <b>title</b> or <b>author</b>…</string>

    <!-- RecyclerView Playground End -->

    <string name="storyList_header_expand">"<b>Expand, show options.</b> "</string>
    <string name="storyList_header_contract">"<b>Contract, hide options.</b> "</string>
    <string name="storylist_header_extra_hidetop">Hide these top options by default</string>
    <string name="storylist_header_enginelaunch">Thunderword launch on touch</string>
    <string name="storylist_header_interface_tips0">User interface Tips: 1) Long-press on the story item to get a full page of options and information. 2) If more than one engine provider is detected, touch on the bold name and switch default provider. 3) Touching at the upper left where it currently says \'Contract, hide options.\' will hide and show this top options panel. It starts out winking to highlight itself. 4) \'Get More\' menu choice will add 300 more stories to the list. 5) Settings for speech, etc: left Drawer menu under \'More settings\'.</string>

    <string name="storylist_entry_engine_zmachine">Z</string>
    <string name="storylist_entry_engine_glulx">G</string>

</resources>
