<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add"
        android:title="Get More"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_remove"
        android:title="Hide Downloaded"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_expand"
          android:title="@string/action_expand_options"
          android:checkable="true"
          android:checked="true"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_launch_external"
          android:title="Launch Thunderword"
          android:checkable="true"
          android:checked="false"
          app:showAsAction="never" />

    <item android:id="@+id/action_scroll_zero"
        android:title="@string/action_scroll_zero"
        android:orderInCategory="70"
        app:showAsAction="never" />
    <item android:id="@+id/action_smooth_zero"
        android:title="@string/action_smooth_zero"
        android:orderInCategory="70"
        app:showAsAction="never" />

    <item android:id="@+id/action_scroll_max"
          android:title="@string/action_scroll_max"
          android:orderInCategory="70"
          app:showAsAction="never" />
    <item android:id="@+id/action_smooth_max"
          android:title="@string/action_smooth_max"
          android:orderInCategory="70"
          app:showAsAction="never" />

    <item android:id="@+id/action_restore_tips"
          android:title="@string/action_restore_tips"
          android:orderInCategory="80"
          app:showAsAction="never" />

</menu>