<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   >

  <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
     android:id="@+id/buttons"
     >
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="80dp"
       android:id="@+id/download"
       android:text="@string/download_story"
       android:textSize="20sp"
       android:gravity="center"
       />
    <ProgressBar
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:id="@+id/progressbar"
       android:indeterminate="true"
       />
    <TextView
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:id="@+id/play"
       android:text="@string/play"
       android:textSize="16sp"
       android:gravity="center"
       android:background="#C5E1A5"
       />
    <LinearLayout
        android:id="@+id/play_via_external_engine_provider_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[⚡]"
            />
      </LinearLayout>

    <!-- City of Secrets is a good example to test scaleType -->
    <ImageView
       android:layout_width="80dp"
       android:layout_height="80dp"
       android:id="@+id/cover"
       android:scaleType="fitCenter"
       android:contentDescription="@string/cover_image"
       />
  </RelativeLayout>

  <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_toRightOf="@id/buttons"
     android:layout_alignParentRight="true"
     android:layout_marginLeft="5dp"
     android:orientation="vertical"
     android:id="@+id/info"
     >
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/name"
       android:singleLine="true"
       android:ellipsize="end"
       />
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/author"
       android:singleLine="true"
       android:ellipsize="end"
       />
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/description"
       android:singleLine="true"
       android:ellipsize="end"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/storyextra0"
        />
  </LinearLayout>
</RelativeLayout>
