<?xml version="1.0" encoding="utf-8"?>
<com.example.android.recyclerplayground.adapters.StoryItemView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/card_min_width"
    android:padding="8dp"
    android:background="@drawable/background_game">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:id="@+id/buttons"
        android:paddingRight="5dp"

        android:layout_column="0"
        android:layout_row="0"
        android:layout_rowSpan="3"
        >

        <TextView
            android:id="@+id/text_score_away"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="100"/>

        <TextView
            android:id="@+id/text_score_home"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            tools:text="200"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:minWidth="80dp"
            android:id="@+id/download"
            android:text="@string/download_story"
            android:textSize="17sp"
            android:gravity="center"
            android:background="#BBDEFB"
            />

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/progressbar"
            android:indeterminate="true"
            />

        <TextView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/play"
            android:text="@string/play"
            android:textSize="16sp"
            android:gravity="center"
            android:background="#C5E1A5"
            />

        <!-- City of Secrets is a good example to test scaleType -->
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/cover"
            android:scaleType="fitCenter"
            android:contentDescription="@string/cover_image"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_team_away"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_column="1"
        android:layout_row="0"
        tools:text="Away Team"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/text_team_home"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_column="1"
        android:layout_row="1"
        tools:text="Home Team"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <!-- This is pushing column 2 off when long
    http://stackoverflow.com/questions/17655954/textview-with-long-text-pushes-out-other-views-in-gridlayout-despite-ellipsize-e
    magic answer is to swet layout_width to 10dp
    -->
    <TextView
        android:id="@+id/text_story_description"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_row="2"
        tools:text="Story Description"
        android:maxLines="5"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:textAppearance="?android:attr/textAppearance"/>

    <TextView
        android:id="@+id/star_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="0"
        android:text="*"
        />
    <TextView
        android:id="@+id/engine_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="1"
        android:text="!"
        />

</com.example.android.recyclerplayground.adapters.StoryItemView>